frontend/src/styles/base/project/_globals.scss
[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak, .ng-hide {
    display: none !important;
}

ng\:form {
    display: block;
}

// ---------- Project Resets ----------

*, *:before, *:after {
    position: relative;
    // overflow: auto;
    box-sizing: border-box;
    // Disables Android's font boosting
    max-height: 1000000px;
    // Disables Android's Auto-Fit Pages
    background: url("");
    // Disables Tap Highlight Color
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
}

sub, sup {
    font-size: 0.5em;
    line-height: 0;
    position: relative;
    vertical-align: baseline;
}

sup {
    top: -0.7em;
    .eq-ie & {
        top: -0.9em;
    }
}

sub {
    bottom: -0.25em;
}

// h1, h2, h3, h4, h5, h6 {
//     sup {
//         font-size: 0.4em;
//         top: -1.2em;
//     }
// }

.nobr,
nobr {
    white-space: nowrap;
}

.eq-ie9 * {
    filter: none !important;
}

.hide {
    display: none !important;
}

.hide--mobile {
    @include mq("mobile") {
        display: none !important;
    }
}

.hide--tablet {
    // @include mq('tablet') {
    //   display: none !important;
    // }
}

.hide--desktop {
    @include mq("desktop") {
        display: none !important;
    }
}

// ._is_open {
//     display: block !important;
// }

a {
    cursor: pointer;
}

hr {
    margin: 0 auto;
    height: 1px;
    border: 0;
    @include rgba-background(rgba(255, 255, 255, 0.4));
}

html,
body {
    width: 100%;
    height: 100%;
}

html {
    background-color: #393e47;
    overflow-y: scroll;
}

.page-wrapper {
    margin: 0 auto;
    overflow: hidden;
    width: 1024px;
    box-shadow: 0px 5px 10px lighten(black, 20%);
    @include mq("mobile") {
        width: 640px;
    }
}

.content-wrap {
    margin: 0 auto;
    width: 960px;
    height: 100%;
    @include mq("mobile") {
        width: 600px;
    }
}

ul.bullet {
    display: block;
    padding-left: 15px;
    @include mq("mobile") {
        font-size: 32px;
        line-height: 40px;
        padding-left: 20px;
    }

    @include mq("desktop") {
        font-size: 20px;
        line-height: 26px;
    }

    > li {
        position: relative;
        display: block;
        padding-bottom: 10px;
    }
    > li:before {
        content: '\2022';
        margin: 0 5px 0 -15px;
        width: 0;
        overflow: visible;
        float: left;
        font-size: 0.8em;
        color: #febd3f;
        @include mq("mobile") {
            margin: 0 5px 0 -20px;
        }
    }
}

ul.dash {
    display: block;
    padding-left: 15px;
    padding-top: 0;
    @include mq("mobile") {
        font-size: 32px;
        line-height: 40px;
        padding-left: 20px;
    }

    @include mq("desktop") {
        font-size: 20px;
        line-height: 26px;
    }

    > li {
        position: relative;
        display: block;
        padding-bottom: 10px;
    }
    > li:before {
        content: '\2013';
        margin: 0 5px 0 -15px;
        width: 0;
        overflow: visible;
        float: left;
        font-size: 0.8em;
        color: #febd3f;
        @include mq("mobile") {
            margin-left: -20px;
        }
    }
    &.dash--em {
        padding-left: 20px;
        @include mq("mobile") {
            padding-left: 30px;
        }

        > li:before {
            content: '\2014';
            margin-left: -20px;
            @include mq("mobile") {
                margin-left: -30px;
            }
        }
    }
}

ol.letter {
    display: block;
    padding-left: 15px;
    counter-reset: lettered;
    @include mq("mobile") {
        font-size: 32px;
        line-height: 40px;
        padding-left: 0;
    }

    @include mq("desktop") {
        font-size: 20px;
        line-height: 26px;
    }

    > li {
        position: relative;
        display: block;
        counter-increment: lettered;
    }
    > li:before {
        content: counter(lettered, lower-alpha);
        margin: 0 5px 0 -15px;
        width: 0;
        overflow: visible;
        float: left;
        @include mq("mobile") {
            margin: 0;
            width: auto;
            float: none;
        }
    }
}

ol.number {
    display: block;
    padding-left: 15px;
    counter-reset: numbered;
    @include mq("mobile") {
        font-size: 32px;
        line-height: 40px;
        padding-left: 35px;
    }

    @include mq("desktop") {
        font-size: 20px;
        line-height: 26px;
    }

    > li {
        position: relative;
        display: block;
        counter-increment: numbered;
    }
    > li:before {
        content: counter(numbered, decimal) ".";
        margin: 0 5px 0 -15px;
        width: 0;
        overflow: visible;
        float: left;
        @include mq("mobile") {
            margin-left: -35px;
        }
    }
}

a {
    text-decoration: none;
    &:hover {
        color: #ffcd6d;
        //text-decoration: underline;
   
    }
}

.ref {
    @include mq("desktop") {
        font-size: 14px;
        line-height: 16px;
    }

    @include mq("mobile") {
        font-size: 20px;
        line-height: 24px;
    }
}

.scroll-point {
    display: block;
    margin-top: 5px;
    margin-bottom: 50px;
    @include mq("mobile") {
        margin-bottom: 93px;
    }
}

// ---------- Brand Styling ----------

body {
    @include helvetica-neue;
    color: #ffffff;
    @include mq("mobile") {
        font-size: 32px;
        line-height: 40px;
    }
}

h1, h2, h3, h4, h5, h6 {
    @include gill-sans;
    color: #febd3f;
    // TODO: add desktop font-size/line-height
    &.white {
        color: #ffffff;
    }
}

h1 {
    // TODO: add desktop font-size/line-height
    @include mq("mobile") {
        font-size: 59px;
        line-height: 63px;
    }
}

h2 {
    @include mq("mobile") {
        font-size: 56px;
        line-height: 60px;
        padding-top: 15px;
        padding-bottom: 40px;
    }

    @include mq("desktop") {
        font-size: 36px;
        line-height: 38px;
        padding-bottom: 35px;
    }
}

h3 {
    @include mq("mobile") {
        font-size: 40px;
        line-height: 44px;
        padding-bottom: 5px;
    }

    @include mq("desktop") {
        font-size: 26px;
        line-height: 29px;
        padding-bottom: 10px;
    }
}

h4 {
    @include mq("mobile") {
        font-size: 36px;
        line-height: 40px;
    }

    @include mq("desktop") {
        font-size: 18px;
        line-height: 20px;
    }
}

.eyebrow {
    @include mq("mobile") {
        font-size: 36px;
        line-height: 40px;
    }
}

.sub-head {
    font-family: font("helvetica neue", "roman");
    @include mq("mobile") {
        font-size: 36px;
        line-height: 40px;
        padding-bottom: 40px;
    }

    @include mq("desktop") {
        font-size: 23px;
        line-height: 26px;
        padding-bottom: 35px;
    }
}

ul,
ol {
    padding-bottom: 20px;
    @include mq("mobile") {
        padding-bottom: 20px;
    }

    ul, ol {
        padding-top: 10px;
        padding-bottom: 0;
    }
}

p {
    padding-bottom: 20px;
    @include mq("mobile") {
        padding-bottom: 20px;
    }

    @include mq("desktop") {
        font-size: 20px;
        line-height: 26px;
    }
}

li {
    padding-bottom: 10px;
    @include mq("mobile") {
        padding-bottom: 10px;
    }

    &:last-child {
        padding-bottom: 0;
    }
}

.chart-head {
    color: #fcbb3f;
    font-family: font("gill sans", "roman");
    @include mq("mobile") {
        font-size: 40px;
        line-height: 44px;
        padding-top: 48px;
    }

    @include mq("desktop") {
        font-size: 26px;
        line-height: 29px;
        padding-top: 48px;
    }
}

.chart-footnote {
    @include mq("desktop") {
        width: 750px;
        text-align: center;
        margin: 0 auto;
    }
}

/* PDF Download link styles - for DSM5 section of index and DSM5 slideout in menu */
a.pdf-link {
    display: block;
    background-repeat: no-repeat;
    color: #333e48;
    text-decoration: none;
    @include mq("desktop") {
        height: 45px;
        margin-top: 15px;
    }

    @include mq("mobile") {
        font-size: 30px;
        margin-top: 0;
        margin-left: 45px;
        height: 92px;
    }

    span {
        border-bottom: 1px solid #333e48;
        line-height: 45px;
        sup {
            text-decoration: none;
        }
    }
}

.yellow {
    color: #fcbb3f;
}

.center {
    text-align: center;
    margin: 0 auto;
}

.footnote {
    @include mq("mobile") {
        font-size: 24px;
        line-height: 28px;
    }

    @include mq("desktop") {
        font-size: 18px;
        line-height: 20px;
    }
}

.no-padding {
    padding: 0;
}

/* Close button for slideouts */
.close {
    position: absolute;
    top: 10px;
    right: 17px;
    height: 28px;
    width: 28px;
    background-image: url("#{$img-path}/close.png");
    cursor: pointer;
    @include mq("mobile") {
        display: none;
    }
}

// DEV
// html::-webkit-scrollbar {
//     width: 0 !important;
// }

// .fpo {
//     height: 500px;
// }

.mejs-container * {
    position: static;
}

.asterisk {
    &:before {
        content: '\002A';
        position: absolute;
        right: 100%;
        padding-right: 2px;
    }
}

.loading {
    display: block;
    width: 32px;
    height: 32px;
    margin: 50px auto;
}

input[type="text"] {
    text-indent: 5px;
}

